--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,13 +15,13 @@
   <button class="asl" (click)="agregarAlTicket('Pestiños', 1, 4.9)">
     <img src="../assets/img/pestinos.webp" alt="pestiños" />Pestiños
   </button>
-  <button class="asl" (click)="agregarAlTicket('Pestiños Miel', 1, 3.2)">
+  <button class="asl" (click)="agregarAlTicket('Pestiño Miel', 1, 3.2)">
     <img
       src="../assets/img/pestinos_miel.webp"
       alt="pestiños con miel"
     />Pestiños Miel
   </button>
-  <button class="asl" (click)="agregarAlTicket('Rosca Fideos', 1, 3.2)">
+  <button class="asl" (click)="agregarAlTicket('Rosca Fideo', 1, 3.2)">
     <img src="../assets/img/rosca_fideos.webp" alt="rosca de fideos" />Rosca
     Fideos
   </button>
