--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,25 +4,25 @@
 <div class="container bg-warning bg-gradient">
   <div class="row gap-3 p-4 bg-rose">
   <button class="asl" (click)="agregarAlTicket('Flores', 1, 6)">
-    <img src="./assets/img/flores.webp" alt="flores" />Flores
+    <img src="../assets/img/flores.webp" alt="flores" />Flores
   </button>
   <button class="asl" (click)="agregarAlTicket('Flores Miel', 1, 8)">
-    <img src="./assets/img/flores.webp" alt="flores con miel" />Flores Miel
+    <img src="../assets/img/flores.webp" alt="flores con miel" />Flores Miel
   </button>
   <button class="asl" (click)="agregarAlTicket('Roscos', 1, 3.9)">
-    <img src="./assets/img/roscos.webp" alt="roscos" />Roscos
+    <img src="../assets/img/roscos.webp" alt="roscos" />Roscos
   </button>
   <button class="asl" (click)="agregarAlTicket('Pestiños', 1, 4.9)">
-    <img src="./assets/img/pestinos.webp" alt="pestiños" />Pestiños
+    <img src="../assets/img/pestinos.webp" alt="pestiños" />Pestiños
   </button>
   <button class="asl" (click)="agregarAlTicket('Pestiño Miel', 1, 3.2)">
     <img
-      src="./assets/img/pestinos_miel.webp"
+      src="../assets/img/pestinos_miel.webp"
       alt="pestiños con miel"
     />Pestiños Miel
   </button>
   <button class="asl" (click)="agregarAlTicket('Rosca Fideo', 1, 3.2)">
-    <img src="./assets/img/rosca_fideos.webp" alt="rosca de fideos" />Rosca
+    <img src="../assets/img/rosca_fideos.webp" alt="rosca de fideos" />Rosca
     Fideos
   </button>
 </div>
